docs: add doc for list products endpoint
